--- a/index2.html
+++ b/index2.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> My nudes </title>
+    <title> UwU </title>
     <style> </style>
-    <section> </section>
-
+    <section></section>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1> So listes very carefully </h1>
+    </header>
+    <h2> I have something very important to tell you </h2>
+    <h3> But you cant tell anyone</h3>
+    <h4> The world isnt what you think it is</h4>
+    <h5> and knowing this will put your life at risk</h5>
+    <h6> but i cant keep it for myself anymore..</h6>
+    <h7> British people are lizards</h7>
+    <h8> thats why they eat all that shit</h8>
+    <h9> well to look human, but mostly cuz they like it :( </h9>
     <main> 
         <section>
         </section>
